# 02-the-mill-game

./: .gitignore  CMakeLists.txt  Dockerfile  GraphicPiece.cpp  GraphicPiece.h  MyGraphicsScene.cpp  MyGraphicsScene.h  NineMensMorris.pro  NineMensMorris.pro.user.fc96f25.4.8-pre1  PlayerPiece.cpp  PlayerPiece.h  README.md  board.cpp  board.h  board.ui  field.cpp  field.h  game.cpp  game.h  gameai.cpp  gameai.h  gamelocal.cpp  gamelocal.h  gamemap.cpp  gamemap.h  gameserver.cpp  gameserver.h  graphicline.cpp  graphicline.h  humanplayer.cpp  humanplayer.h  lib.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  multiplayermenu.cpp  multiplayermenu.h  multiplayermenu.ui  piece.cpp  (+8 more)
The-Mill-Game/: Makefile  NineMensMorris  moc_board.cpp  ui_board.h
code/forms/: board.ui  help.ui  localgamemenu.ui  mainmenu.ui  multiplayermenu.ui
code/include/: Board.h  Field.h  Game.h  GameAi.h  GameMap.h  GameServer.h  GraphicLine.h  GraphicPiece.h  Help.h  Lib.h  LocalGameMenu.h  MainMenu.h  MultiplayerMenu.h  MyGraphicsScene.h  Piece.h  Player.h  TcpClient.h  TcpServer.h
code/resources/: icons.qrc
code/src/: Board.cpp  Field.cpp  Game.cpp  GameAi.cpp  GameMap.cpp  GameServer.cpp  GraphicLine.cpp  GraphicPiece.cpp  Help.cpp  LocalGameMenu.cpp  MainMenu.cpp  MultiplayerMenu.cpp  MyGraphicsScene.cpp  Piece.cpp  Player.cpp  TcpClient.cpp  TcpServer.cpp  main.cpp
